# statistic-tools

./: .clang-tidy  .gitmodules  CMakeLists.txt  average.cpp  max.cpp
IO/: CMakeLists.txt  readData.cpp  readData.h
